--- a/src/views/DharmaScheduler.css
+++ b/src/views/DharmaScheduler.css
@@ -207,7 +207,7 @@ html, body {
   transform: translateX(-50%);
   font-size: 2.8rem;
   font-weight: bold;
-  color: oklab(82.34% -0.00687 -0.04888);
+  color: #fff;
   text-shadow: 0 0 20px #a40a80;
 }
 
@@ -573,7 +573,6 @@ FORM */
   box-shadow: 0 0 25px gold;
   text-shadow: 0 0 8px #fff;
 }
-lp
 
 /* BACK BUTTON */
 .explore-content .back-btn {
@@ -591,3 +590,4 @@ lp
   color: #fff;
   box-shadow: 0 0 50px #00cfff;
 }
+
