--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,9 @@
 /* index.css */
 
-/* Hide default cursor everywhere */
-* {
-  cursor: none !important;
-}
 
 body, html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  cursor: default;
 }
